--- a/arkanoid/arkanoid.vcxproj.filters
+++ b/arkanoid/arkanoid.vcxproj.filters
@@ -39,10 +39,13 @@
     <ClCompile Include="bonus.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="game_field.cpp">
-      <Filter>Заголовочные файлы</Filter>
-    </ClCompile>
     <ClCompile Include="game_border.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="legend.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="game_field.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
@@ -75,6 +78,12 @@
       <Filter>Заголовочные файлы\bonus</Filter>
     </ClInclude>
     <ClInclude Include="game_border.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="legend.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="config.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
