Implement collisions with borders, rocket and blocks.

--- a/arkanoid/arkanoid.vcxproj.filters
+++ b/arkanoid/arkanoid.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="game_field.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="geom_helpers.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -84,6 +87,9 @@
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="config.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="geom_helpers.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
