--- a/arkanoid/arkanoid.vcxproj
+++ b/arkanoid/arkanoid.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="game_border.cpp" />
     <ClCompile Include="game_field.cpp" />
+    <ClCompile Include="geom_helpers.cpp" />
     <ClCompile Include="gl_helpers.cpp" />
     <ClCompile Include="legend.cpp" />
     <ClCompile Include="main.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="game_border.h" />
     <ClInclude Include="game_field.h" />
+    <ClInclude Include="geom_helpers.h" />
     <ClInclude Include="gl_helpers.h" />
     <ClInclude Include="legend.h" />
     <ClInclude Include="rocket.h" />
