--- a/arkanoid/arkanoid.vcxproj
+++ b/arkanoid/arkanoid.vcxproj
@@ -159,6 +159,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="random_bonus_factory.cpp" />
     <ClCompile Include="rocket.cpp" />
+    <ClCompile Include="speed_down_bonus.cpp" />
+    <ClCompile Include="speed_up_bonus.cpp" />
     <ClCompile Include="squeeze_bonus.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -179,6 +181,8 @@
     <ClInclude Include="legend.h" />
     <ClInclude Include="random_bonus_factory.h" />
     <ClInclude Include="rocket.h" />
+    <ClInclude Include="speed_down_bonus.h" />
+    <ClInclude Include="speed_up_bonus.h" />
     <ClInclude Include="squeeze_bonus.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
