--- a/arkanoid/arkanoid.vcxproj.filters
+++ b/arkanoid/arkanoid.vcxproj.filters
@@ -63,6 +63,12 @@
     <ClCompile Include="random_bonus_factory.cpp">
       <Filter>Заголовочные файлы\bonus</Filter>
     </ClCompile>
+    <ClCompile Include="speed_up_bonus.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="speed_down_bonus.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -111,6 +117,12 @@
       <Filter>Заголовочные файлы\bonus</Filter>
     </ClInclude>
     <ClInclude Include="random_bonus_factory.h">
+      <Filter>Заголовочные файлы\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="speed_down_bonus.h">
+      <Filter>Заголовочные файлы\bonus</Filter>
+    </ClInclude>
+    <ClInclude Include="speed_up_bonus.h">
       <Filter>Заголовочные файлы\bonus</Filter>
     </ClInclude>
   </ItemGroup>
